# kuire-svn

./: AUTHORS  Makefile.in  configure  configure.in  kuire.kdevelop
autom4te.cache/: output.0  traces.0
debug/: Makefile  config.status  libtool
debug/doc/: Makefile
debug/doc/en/: Makefile  index.cache.bz2
debug/po/: Makefile
debug/src/: Makefile  kuire  kuire.moc  kuire_client  kuireiface.kidl  kuireiface_skel.cpp  kuireview.moc  pref.moc
doc/: Makefile.am  Makefile.in
doc/en/: Makefile.am  Makefile.in  index.docbook
playground/tabletest/: main.cpp  qxtable.cpp  qxtable.h  tabletest.pro
src/: Makefile.in  kuire.cpp  kuire.desktop  kuire.lsm  kuire_client.cpp  kuireview.cpp  main.cpp  pref.h
templates/: cpp
trunk/: Doxyfile  config.h  configure.in.in  kuire.kdevelop.pcs
trunk/src/: Makefile.am  Makefile.in  actorsview.cpp  actorsview.h  chaptereditor.cpp  chaptereditor.h  editorsview.cpp  editorsview.h  kuire.cpp  kuire.desktop  kuire.h  kuire.lsm  kuireiface.h  kuireui.rc  kuireview.h  main.cpp  pref.cpp
